# sha256-calculator

./: .clangd  .gitignore  README.md  meson.build
.github/workflows/: codeql-config.yml  codeql.yml
src/: main.c  sha256_gui.c  sha256_gui.h  utils.c  utils.h
tests/: meson.build  test_utils.c
